@@ -47,6 +47,11 @@ v4.2.13 (work-in-progress)
      * Add utility function fmtUInt64AsNiceDbl for safely formatting integers
        like 1000000 as 1e6, 12000 as 12e3, or falling back to just a plain
        integer value when appropriate.
+     * MiniMC simulations now keep track of how many neutrons (and weights) are
+       respectively provided by the source and miss the geometry. This on one
+       hand allows more robust estimation of fraction of intensity absorption,
+       as well as makes it easier to illuminate complicated shapes uniformly,
+       while ignoring the parts of the beam missing the geometry.
      * ...
 
 v4.2.12 2026-01-05
